@@ -251,7 +251,7 @@ subdir_clean:
 	@$(MAKE) -C mm -f Makefile.test TOPDIR="$(TOPDIR)" clean
 
 clean: subdir_clean
-	@rm -f $(BIN) $(BIN).* mm_test *.map *~
+	@rm -f $(BIN) nuttx.* mm_test *.map *~
 
 subdir_distclean:
 	@for dir in $(CLEANDIRS) ; do \
